--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./index.js",
-    "build": "./node_modules/.bin/babel index.js -o ./bundle.js"
+    "start": "node ./bundle.js",
+    "build": "./node_modules/.bin/webpack",
+    "devserver": "node_modules/.bin/webpack-dev-server"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "webpack": "^4.29.3",
+    "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "babel-loader": "7",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack-dev-server": "^3.1.14"
   }
 }
