--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./bundle.js",
+    "start": "node ./dist/bundle.js",
     "build": "./node_modules/.bin/webpack",
     "devserver": "node_modules/.bin/webpack-dev-server"
   },
