--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "webpack": "^4.29.4",
-    "webpack-cli": "^3.2.3"
-  },
-  "dependencies": {
     "babel-loader": "7",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.29.4",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
+  },
+  "dependencies": {
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2"
   }
 }
