--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "babel-preset-stage-0": "^6.24.1",
     "react": "^16.8.2",
-    "react-dom": "^16.8.2"
+    "react-dom": "^16.8.2",
+    "whatwg-fetch": "^3.0.0"
   }
 }
