--- a/package.json
+++ b/package.json
@@ -13,17 +13,26 @@
     "babel-loader": "7",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "basscss-background-colors": "^2.1.0",
+    "basscss-colors": "^2.2.0",
+    "css-loader": "^2.1.0",
     "dotenv": "^6.2.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "postcss": "^7.0.14",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "babel-preset-stage-0": "^6.24.1",
+    "basscss": "^8.0.10",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "style-loader": "^0.23.1",
     "whatwg-fetch": "^3.0.0"
   }
 }
