--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-loader": "7",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "basscss-background-colors": "^2.1.0",
     "basscss-colors": "^2.2.0",
-    "css-loader": "^2.1.0",
     "dotenv": "^6.2.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -30,6 +29,7 @@
   },
   "dependencies": {
     "basscss": "^8.0.10",
+    "css-loader": "1.0.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "style-loader": "^0.23.1",
