--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "basscss": "^8.0.10",
+    "classnames": "^2.2.6",
     "css-loader": "1.0.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
