--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "start": "node ./dist/bundle.js",
     "build": "./node_modules/.bin/webpack",
-    "devserver": "node_modules/.bin/webpack-dev-server"
+    "devserver": "node_modules/.bin/webpack-dev-server",
+    "lint": "node_modules/.bin/eslint ./src"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -17,6 +19,11 @@
     "basscss-background-colors": "^2.1.0",
     "basscss-colors": "^2.2.0",
     "dotenv": "^6.2.0",
+    "eslint": "^5.14.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "postcss": "^7.0.14",
@@ -31,6 +38,8 @@
     "basscss": "^8.0.10",
     "classnames": "^2.2.6",
     "css-loader": "1.0.1",
+    "md5": "^2.2.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "style-loader": "^0.23.1",
