--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./dist/bundle.js",
     "build": "./node_modules/.bin/webpack",
     "devserver": "node_modules/.bin/webpack-dev-server",
-    "lint": "node_modules/.bin/eslint ./src"
+    "lint": "node_modules/.bin/eslint ./src",
+    "precommit": "echo hello"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
