--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "./node_modules/.bin/webpack",
     "devserver": "node_modules/.bin/webpack-dev-server",
     "lint": "node_modules/.bin/eslint ./src",
-    "precommit": "echo hello"
+    "precommit": "echo test"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -27,6 +27,7 @@
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
     "postcss": "^7.0.14",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
