--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-router-dom": "^4.3.1",
     "style-loader": "^0.23.1",
     "whatwg-fetch": "^3.0.0"
   }
