--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "./node_modules/.bin/webpack",
     "devserver": "node_modules/.bin/webpack-dev-server",
     "lint": "node_modules/.bin/eslint ./src",
+    "test": "node_modules/.bin/jest",
     "precommit": "lint-staged"
   },
   "lint-staged": {
@@ -29,11 +30,13 @@
     "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.3.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
+    "jest": "^24.1.0",
     "lint-staged": "^8.1.4",
     "postcss": "^7.0.14",
     "postcss-cssnext": "^3.1.0",
