--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.8.3",
     "style-loader": "^0.23.1",
     "whatwg-fetch": "^3.0.0"
   }
