NOJIRA:Adding mock file tests.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "basscss-background-colors": "^2.1.0",
     "basscss-colors": "^2.2.0",
     "dotenv": "^6.2.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
     "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
